@@ -1,190 +1,163 @@
 package ru.diasoft.spring.service.impl;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.diasoft.spring.dao.AuthorDao;
-import ru.diasoft.spring.dao.BookDao;
-import ru.diasoft.spring.dao.CommentDao;
-import ru.diasoft.spring.dao.GenreDao;
 import ru.diasoft.spring.domain.Author;
 import ru.diasoft.spring.domain.Book;
 import ru.diasoft.spring.domain.Comment;
 import ru.diasoft.spring.domain.Genre;
+import ru.diasoft.spring.repository.AuthorRepository;
+import ru.diasoft.spring.repository.BookRepository;
+import ru.diasoft.spring.repository.CommentRepository;
+import ru.diasoft.spring.repository.GenreRepository;
 import ru.diasoft.spring.service.BookService;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+/**
+ * Реализация сервиса для работы с книгами
+ */
 @Service
-
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class BookServiceImpl implements BookService {
-
-    private final BookDao bookDao;
-
-    private final AuthorDao authorDao;
-    private final GenreDao genreDao;
-
-    public BookServiceImpl(@Qualifier("BookDaoJPAImpl") BookDao bookDao, @Qualifier("AuthorDaoIJPAmpl") AuthorDao authorDao, @Qualifier("GenreDaoJPAImpl") GenreDao genreDao, CommentDao commentDao) {
-        this.bookDao = bookDao;
-        this.authorDao = authorDao;
-        this.genreDao = genreDao;
-    }
+    private final BookRepository bookRepository;
+    private final AuthorRepository authorRepository;
+    private final GenreRepository genreRepository;
+    private final CommentRepository commentRepository;
 
     @Override
-    @Transactional
     public List<Book> getAllBooks() {
-        return bookDao.findAll();
+        return bookRepository.findAllWithDetails();
     }
 
     @Override
-    @Transactional
     public Optional<Book> getBookById(Long id) {
-        return bookDao.findById(id);
+        return bookRepository.findByIdWithDetails(id);
     }
 
     @Override
     @Transactional
     public Book createBook(String title, String authorFirstName, String authorLastName, String genreName) {
-        // Find or create author
-        Author author = authorDao.findByFullName(authorFirstName, authorLastName)
+        // Находим или создаем автора
+        // В конструкторе Author параметры идут в порядке: id, lastName, firstName, age
+        Author author = authorRepository.findByFirstNameAndLastName(authorFirstName, authorLastName)
                 .orElseGet(() -> {
-                    Author newAuthor = new Author();
-                    newAuthor.setFirstName(authorFirstName);
-                    newAuthor.setLastName(authorLastName);
-                    newAuthor.setAge(null);
-                    return authorDao.save(newAuthor);
+                    Author newAuthor = new Author(null, authorLastName, authorFirstName, 0);
+                    return authorRepository.save(newAuthor);
                 });
 
-        // Find or create genre
-        Genre genre = genreDao.findByName(genreName)
+        // Находим или создаем жанр
+        Genre genre = genreRepository.findByName(genreName)
                 .orElseGet(() -> {
-                    Genre newGenre = new Genre();
-                    newGenre.setName(genreName);
-                    return genreDao.save(newGenre);
+                    Genre newGenre = new Genre(null, genreName);
+                    return genreRepository.save(newGenre);
                 });
 
-        // Create book with Author and Genre objects
-        Book book = new Book();
-        book.setTitle(title);
-        book.setAuthor(author);
-        book.setGenre(genre);
-
-        return bookDao.save(book);
+        // Создаем и сохраняем книгу
+        Book book = new Book(null, title, author, genre, null);
+        return bookRepository.save(book);
     }
 
     @Override
     @Transactional
     public Book updateBook(Long id, String title, String authorFirstName, String authorLastName, String genreName) {
-        Optional<Book> existingBook = bookDao.findById(id);
+        // Находим книгу
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Книга не найдена"));
 
-        if (existingBook.isPresent()) {
-            Book book = existingBook.get();
-            book.setTitle(title);
+        // Находим или создаем автора
+        // В конструкторе Author параметры идут в порядке: id, lastName, firstName, age
+        Author author = authorRepository.findByFirstNameAndLastName(authorFirstName, authorLastName)
+                .orElseGet(() -> {
+                    Author newAuthor = new Author(null, authorLastName, authorFirstName, 0);
+                    return authorRepository.save(newAuthor);
+                });
 
-            // Обновляем автора
-            Optional<Author> existingAuthor = authorDao.findByFullName(authorFirstName, authorLastName);
-            Author author = existingAuthor.orElseGet(() -> {
-                Author newAuthor = new Author(null, authorLastName, authorFirstName, null);
-                return authorDao.save(newAuthor);
-            });
-            book.setAuthor(author);
+        // Находим или создаем жанр
+        Genre genre = genreRepository.findByName(genreName)
+                .orElseGet(() -> {
+                    Genre newGenre = new Genre(null, genreName);
+                    return genreRepository.save(newGenre);
+                });
 
-            // Обновляем жанр
-            Optional<Genre> existingGenre = genreDao.findByName(genreName);
-            Genre genre = existingGenre.orElseGet(() -> {
-                Genre newGenre = new Genre(null, genreName);
-                return genreDao.save(newGenre);
-            });
-            book.setGenre(genre);
+        // Обновляем данные книги
+        book.setTitle(title);
+        book.setAuthor(author);
+        book.setGenre(genre);
 
-            return bookDao.save(book);
-        } else {
-            // Если книга не найдена, создаем новую
-            return createBook(title, authorFirstName, authorLastName, genreName);
-        }
+        return bookRepository.save(book);
     }
 
     @Override
     @Transactional
     public void deleteBook(Long id) {
-        bookDao.deleteById(id);
+        // Сначала удаляем все комментарии к книге
+        commentRepository.deleteByBookId(id);
+        // Затем удаляем саму книгу
+        bookRepository.deleteById(id);
     }
 
     @Override
-    @Transactional
     public List<Book> findBooksByTitle(String title) {
-        return bookDao.findByTitle(title);
+        return bookRepository.findByTitleContainingIgnoreCase(title);
     }
 
     @Override
-    @Transactional
     public List<Book> findBooksByAuthor(String firstName, String lastName) {
-        Optional<Author> author = authorDao.findByFullName(firstName, lastName);
-        if (author.isEmpty()) {
-            return List.of();
-        }
-        return bookDao.findByAuthorId(author.get().getId());
+        return authorRepository.findByFirstNameAndLastName(firstName, lastName)
+                .map(author -> bookRepository.findByAuthorId(author.getId()))
+                .orElse(Collections.emptyList());
     }
 
     @Override
-    @Transactional
     public List<Book> findBooksByGenre(String genreName) {
-        Optional<Genre> genre = genreDao.findByName(genreName);
-        if (genre.isEmpty()) {
-            return List.of();
-        }
-        return bookDao.findByGenreId(genre.get().getId());
+        return bookRepository.findByGenre_NameContainingIgnoreCase(genreName);
     }
-
-    // Новый метод для создания книги с готовыми объектами
 
     @Override
     @Transactional
     public Book createBookWithObjects(String title, Author author, Genre genre) {
-        Book book = new Book();
-        book.setTitle(title);
-        book.setAuthor(author);
-        book.setGenre(genre);
-        return bookDao.save(book);
-    }
-    @Transactional
-    @Override
-    public Comment addCommentToBook(Long bookId, String description, String nickname) {
-        Book book = bookDao.findById(bookId)
-                .orElseThrow(() -> new IllegalArgumentException("Book not found with id: " + bookId));
+        // Проверяем существование автора
+        Author existingAuthor = authorRepository.findByFirstNameAndLastName(
+                author.getFirstName(), author.getLastName()
+        ).orElseGet(() -> authorRepository.save(author));
 
-        Comment comment = new Comment();
-        comment.setDescription(description);
-        comment.setNickname(nickname);
-        comment.setBook(book);
+        // Проверяем существование жанра
+        Genre existingGenre = genreRepository.findByName(genre.getName())
+                .orElseGet(() -> genreRepository.save(genre));
 
-        book.getComments().add(comment);
-        bookDao.save(book);
-
-        return comment;
-    }
-
-    @Transactional
-    @Override
-    public void removeCommentFromBook(Long bookId, Long commentId) {
-        Book book = bookDao.findById(bookId)
-                .orElseThrow(() -> new IllegalArgumentException("Book not found with id: " + bookId));
-
-        Comment commentToRemove = book.getComments().stream()
-                .filter(c -> c.getId().equals(commentId))
-                .findFirst()
-                .orElseThrow(() -> new IllegalArgumentException("Comment not found with id: " + commentId));
-
-        book.getComments().remove(commentToRemove);
-        bookDao.save(book);
+        // Создаем книгу
+        Book book = new Book(null, title, existingAuthor, existingGenre, null);
+        return bookRepository.save(book);
     }
 
     @Override
     public List<Comment> getBookComments(Long bookId) {
-        Book book = bookDao.findById(bookId)
-                .orElseThrow(() -> new IllegalArgumentException("Book not found with id: " + bookId));
-        return book.getComments();
+        return commentRepository.findByBookId(bookId);
+    }
+
+    @Override
+    @Transactional
+    public void removeCommentFromBook(Long bookId, Long commentId) {
+        // Проверяем, что комментарий принадлежит книге
+        commentRepository.findById(commentId)
+                .filter(comment -> comment.getBook().getId().equals(bookId))
+                .ifPresent(comment -> commentRepository.delete(comment));
+    }
+
+    @Override
+    @Transactional
+    public Comment addCommentToBook(Long bookId, String description, String nickname) {
+        // Находим книгу
+        Book book = bookRepository.findById(bookId)
+                .orElseThrow(() -> new RuntimeException("Книга не найдена"));
+        
+        // Создаем и сохраняем комментарий
+        Comment comment = new Comment(null, description, nickname, book);
+        return commentRepository.save(comment);
     }
 }
